--- a/git/web-deployment.yaml
+++ b/git/web-deployment.yaml
@@ -1,18 +1,76 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   annotations:
+#     deployment.kubernetes.io/revision: "1"
+#     kubectl.kubernetes.io/last-applied-configuration: |
+#       {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-04-04T09:47:40Z","generation":3,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"8848","uid":"857883f7-b183-4709-8e13-63adb5e9e6b0"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"image":"docker.io/bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":10,"conditions":[{"lastTransitionTime":"2025-04-04T09:47:40Z","lastUpdateTime":"2025-04-04T09:47:57Z","message":"ReplicaSet \"synergychat-web-f765d99db\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2025-04-04T23:49:00Z","lastUpdateTime":"2025-04-04T23:49:00Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":3,"readyReplicas":10,"replicas":10,"updatedReplicas":10}}
+#   creationTimestamp: "2025-04-04T09:47:40Z"
+#   generation: 4
+#   labels:
+#     app: synergychat-web
+#   name: synergychat-web
+#   namespace: default
+#   resourceVersion: "9705"
+#   uid: 857883f7-b183-4709-8e13-63adb5e9e6b0
+# spec:
+#   progressDeadlineSeconds: 600
+#   replicas: 3
+#   revisionHistoryLimit: 10
+#   selector:
+#     matchLabels:
+#       app: synergychat-web
+#   strategy:
+#     rollingUpdate:
+#       maxSurge: 25%
+#       maxUnavailable: 25%
+#     type: RollingUpdate
+#   template:
+#     metadata:
+#       creationTimestamp: null
+#       labels:
+#         app: synergychat-web
+#     spec:
+#       containers:
+#       - image: docker.io/bootdotdev/synergychat-web:latest
+#         imagePullPolicy: Always
+#         name: synergychat-web
+#         resources: {}
+#         terminationMessagePath: /dev/termination-log
+#         terminationMessagePolicy: File
+#       dnsPolicy: ClusterFirst
+#       restartPolicy: Always
+#       schedulerName: default-scheduler
+#       securityContext: {}
+#       terminationGracePeriodSeconds: 30
+# status:
+#   availableReplicas: 3
+#   conditions:
+#   - lastTransitionTime: "2025-04-04T09:47:40Z"
+#     lastUpdateTime: "2025-04-04T09:47:57Z"
+#     message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
+#     reason: NewReplicaSetAvailable
+#     status: "True"
+#     type: Progressing
+#   - lastTransitionTime: "2025-04-04T23:49:00Z"
+#     lastUpdateTime: "2025-04-04T23:49:00Z"
+#     message: Deployment has minimum availability.
+#     reason: MinimumReplicasAvailable
+#     status: "True"
+#     type: Available
+#   observedGeneration: 4
+#   readyReplicas: 3
+#   replicas: 3
+#   updatedReplicas: 3
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-04-04T09:47:40Z","generation":3,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"8848","uid":"857883f7-b183-4709-8e13-63adb5e9e6b0"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"image":"docker.io/bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":10,"conditions":[{"lastTransitionTime":"2025-04-04T09:47:40Z","lastUpdateTime":"2025-04-04T09:47:57Z","message":"ReplicaSet \"synergychat-web-f765d99db\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2025-04-04T23:49:00Z","lastUpdateTime":"2025-04-04T23:49:00Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":3,"readyReplicas":10,"replicas":10,"updatedReplicas":10}}
-  creationTimestamp: "2025-04-04T09:47:40Z"
-  generation: 4
   labels:
     app: synergychat-web
   name: synergychat-web
   namespace: default
-  resourceVersion: "9705"
-  uid: 857883f7-b183-4709-8e13-63adb5e9e6b0
 spec:
   progressDeadlineSeconds: 600
   replicas: 3
@@ -27,7 +85,6 @@ spec:
     type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: synergychat-web
     spec:
@@ -35,6 +92,17 @@ spec:
       - image: docker.io/bootdotdev/synergychat-web:latest
         imagePullPolicy: Always
         name: synergychat-web
+        env:
+          - name: WEB_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: web-service-configmap
+                key: WEB_PORT
+          - name: API_URL
+            valueFrom:
+              configMapKeyRef:
+                name: web-service-configmap
+                key: API_URL
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
@@ -43,22 +111,3 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-status:
-  availableReplicas: 3
-  conditions:
-  - lastTransitionTime: "2025-04-04T09:47:40Z"
-    lastUpdateTime: "2025-04-04T09:47:57Z"
-    message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  - lastTransitionTime: "2025-04-04T23:49:00Z"
-    lastUpdateTime: "2025-04-04T23:49:00Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
-  observedGeneration: 4
-  readyReplicas: 3
-  replicas: 3
-  updatedReplicas: 3
