--- a/git/crawler-configmap.yaml
+++ b/git/crawler-configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: synergychat-crawler-configmap  
+  name: synergychat-crawler-configmap
+  namespace: crawler
 data:
   CRAWLER_PORT: "8080"
   CRAWLER_PORT_2: "8081"
