--- a/git/crawler-service.yaml
+++ b/git/crawler-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: crawler-service
+  namespace: crawler
   labels:
     app: synergychat-crawler
 spec:
